--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,74 @@
 @import url("https://use.typekit.net/xpi1scr.css");
 
+* {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+}
+
+/* Text styles */
+
+h1 {
+    color: #12419F;
+    font-size: 2rem;
+}
+h2 {
+    color: #12419F;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
 body {
     font-family: 'Basic Sans', sans-serif;
     letter-spacing: 0.6px;
     background-color: #FAF9F8;
 }
-  
-#container {
-    margin: 0 auto;
-    max-width: 600px;
-    text-align: center;
+
+/* */
+
+header {
+    background-color: #12419F;
+    width: 100%;
+    height: 4rem;
+    padding: 1.2rem 1.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
 }
-  
+#container {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+    margin-top: 7rem;
+}
+ul {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0;
+    margin-bottom: 7rem;
+    width: 40vw;
+}
 #shoppingList {
+    justify-content: center;
     list-style-type: none;
-    padding: 0;
+}
+#shopping_list_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .input_wrapper {
     background-color: white;
@@ -24,6 +78,9 @@ body {
     flex-direction: row;
     justify-content: space-between;
     padding: .5rem;
+    width: 500px;
+    margin-block: 1rem;
+    width: 40vw;
 }
 .input_wrapper > #itemInput {
     font-size: 1rem;
@@ -32,7 +89,6 @@ body {
     color: #12419F;
     margin-left: .5rem;
     font-family: 'Basic Sans', sans-serif;
-    width: 80%;
 }
 .input_wrapper > #itemInput:focus-within {
     outline: none;
@@ -43,21 +99,60 @@ body {
 li {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin-bottom: 1rem;
     background-color: #E0EBF4;
     color: #12419F;
     padding: 1rem;
     border-radius: 15px;
-  }
-  
-  li input[type="text"] {
+    font-weight: 600;
+}
+li input[type="text"] {
     margin-right: 10px;
     color: #12419F;
     border: none;
     font-size: 1rem;
+    font-weight: 600;
     background-color: #E0EBF4;
 }
+#editTitleBtn {
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: .5rem .5rem;
+    border-radius: 100%;
+}
+.list_title_wrapper {
+    flex-direction: row;
+    display: flex;
+    column-gap: 1rem;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    background-color: white;
+    color: #12419F;
+    padding: 1rem;
+    border-radius: 15px;
+    border: 1px solid #E0EBF4;
+}
+#titleInput {
+    margin-right: 10px;
+    color: #12419F;
+    border: none;
+    font-size: 1rem;
+    font-family: 'Basic Sans', sans-serif;
+    background-color: transparent;
+    width: 100%;
+}
+#titleInput:focus-within {
+    outline: none;
+}
+#save-title-btn {
+    display: none;
+    padding: .7rem 1.2rem;
+}
 button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     background-color: #E0EBF4;
     color: #12419F;
     font-size: .9rem;
@@ -68,6 +163,9 @@ button {
     padding: .7rem 1.2rem;
     border-radius: 15px;
     transition: .2s ease-in-out;
+}
+button > img {
+    width: .8rem;
 }
 button:hover {
     cursor: pointer;
@@ -82,11 +180,21 @@ li button {
     display: block;
 }
   
-#buttons {
-    margin-top: 20px;
-}
-  
 #clearListBtn, #saveListBtn {
-    margin-right: 10px;
+    transition: .3s linear;
 }
-  
+#bottom_bar {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    border-top: solid 1px #D0D9EC;
+    background-color: #FAF9F8;
+}
