--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h2 {
     color: #12419F;
     font-size: 1.2rem;
     font-weight: 400;
-    font-family: 'Basic Sans', sans-serif;
+    font-family: 'Basic Sans', Helvetica sans-serif;
 }
 p {
     color: white;
