--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,11 @@ main {
 h1 {
     color: #12419F;
     font-size: 2rem;
+    font-family: 'Basic Sans', Helvetica sans-serif;
 }
 h2 {
     color: #12419F;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 400;
     font-family: 'Basic Sans', Helvetica sans-serif;
 }
