--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ h2 {
 }
 p {
     color: white;
-    font-family: 'Basic Sans', Helvetica sans-serif;
+    font-family: 'Basic Sans', sans-serif;
 }
 
 li {
